# tap-mongodb

./: .gitignore  CHANGELOG.md  README.md  meltano.yml  pyproject.toml  tox.ini
.changes/: 0.1.10.md  0.1.11.md  0.1.8.md  0.1.9.md  0.4.3.md
.github/workflows/: ci_workflow.yml
tap_mongodb/: collection.py  tap.py
tap_mongodb/tests/: test_core.py
tap_mongodb_z/: tap.py
tap_mongodb_z/tests/: __init__.py  test_core.py
