[tool.poetry]
name = "z3-tap-mongodb"
version = "0.3.1"
description = "z3-tap-mongodb is a Singer tap for MongoDB, built with the Meltano SDK for Singer Taps."
authors = ["Alex Butler <butler.alex2010@gmail.com>"]
keywords = ["ELT", "MongoDB"]
license = "Apache 2.0"
include = ["README.md", "LICENSE"]
packages = [{ include = "tap_mongodb" }]
homepage = "https://github.com/z3z1ma/tap-mongodb"
repository = "https://github.com/z3z1ma/tap-mongodb"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = ">=2.25.1"
singer-sdk = ">=0.17.0"
pymongo = { version = ">=4.3.3", extras = ["srv"] }
orjson = ">=3.8.2"
genson = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
tox = ">=3.24.4"
flake8 = ">=3.9.2"
black = ">=21.9"
pydocstyle = ">=6.1.1"
mypy = ">=0.910"
types-requests = ">=2.26.1"
isort = ">=5.10.1"

[tool.black] # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 100
target-version = ["py39"]
preview = true

[tool.isort] # https://pycqa.github.io/isort/docs/configuration/options.html
color_output = true
line_length = 100
profile = "black"
src_paths = "tap_mongodb"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-mongodb = 'tap_mongodb.tap:TapMongoDB.cli'
